# bot_for_myself

./: .env  fast_api.py  graph.py  langgraph.json  main.py  notes.txt  pyproject.toml  server.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/: math_agent.py  rag_agent.py  research_agent.py
nodes/: fallback.py  finalizer.py  planner.py  supervisor.py
rag_for_me/: docker-compose.yml  prompt.py  rag_chain.py
rag_for_me/build_vector/embeddings/: embed_store.py
rag_for_me/build_vector/loader/: document_loader.py
rag_for_me/cache/: keyword_retriever.pkl
rag_for_me/knowledge_base/: personal_infomation.md  personal_information.md
rag_for_me/retriever/: basic_retriever.py  hybrid_retriever.py  keyword_retriever.py
utils/: config.py  tools.py
