[project]
name = "learn-on-youtube-multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langgraph-supervisor>=0.0.29",
    "pymongo>=4.12.1",
]
